--- a/MyAgent/.classpath
+++ b/MyAgent/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_45"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_60"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/jade-4.4.0.jar" sourcepath="lib/jade/src"/>
-	<classpathentry kind="lib" path="lib/java-json.jar"/>
-	<classpathentry kind="lib" path="lib/antworld.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/java-json.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/antworld.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
