--- a/MyAgent/.classpath
+++ b/MyAgent/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/java-json.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/antworld.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/javax-inject.jar"/>
+	<classpathentry kind="lib" path="lib/cdi-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
