--- a/MyAgent/.classpath
+++ b/MyAgent/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_45"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_60"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="cfg/"/>
 	<classpathentry exported="true" kind="lib" path="lib/jade-4.4.0.jar" sourcepath="lib/jade/src"/>
@@ -9,6 +9,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/javax-inject.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/cdi-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.21.jar"/>
-	<classpathentry exported="true" kind="lib" path="D:/Daten/maximilian.weidemann/Desktop/Uni/Git/agent/MyAgent/lib/slf4j-jdk14-1.7.21.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-jdk14-1.7.21.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
