--- a/MyAgent/.classpath
+++ b/MyAgent/.classpath
@@ -2,13 +2,15 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_60"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="cfg/"/>
+	<classpathentry kind="src" path="cfg"/>
 	<classpathentry exported="true" kind="lib" path="lib/jade-4.4.0.jar" sourcepath="lib/jade/src"/>
 	<classpathentry exported="true" kind="lib" path="lib/java-json.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/antworld.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javax-inject.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/cdi-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.21.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-jdk14-1.7.21.jar"/>
+	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/logback-classic-1.1.7.jar"/>
+	<classpathentry kind="lib" path="lib/logback-core-1.1.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
